# cc_bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  config.example.toml  deny.toml
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: discovery.rs  lib.rs  model.rs  parser.rs  pricing.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: api.rs  config.rs  embed.rs  error.rs  hooks_config.rs  mailbox.rs  main.rs  mcp.rs  store.rs  supervisor.rs  themes.rs  watcher.rs
docs/: USAGE.md
hooks/: ccbridge-hook.mjs
themes/official/: README.md  theme.json
web/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/e2e/: smoke.spec.ts  terminal-copy.spec.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
web/src/components/: ActionStream.tsx  Board.tsx  ChatPane.tsx  ClawdSprite.tsx  DetailPane.tsx  DetailPanel.tsx  ErrorBoundary.tsx  Heatmap.tsx  InboxPanel.tsx  NewSessionModal.tsx  SessionCard.tsx  SessionList.tsx  SkinPicker.tsx  StatsBar.tsx  Tabs.tsx  TaskBar.tsx  TerminalDrawer.tsx  TerminalView.tsx
web/src/hooks/: useInbox.ts  useThemes.ts
web/src/lib/: actions.test.ts  actions.ts  bucket.ts  classify.test.ts  classify.ts  format.ts  i18n.test.ts  i18n.ts  inbox.test.ts  inbox.ts  renames.ts  skins.test.ts  skins.ts  termFilter.test.ts  termFilter.ts
