[package]
name = "ccbridge-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "ccbridge_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs = "5"
