[package]
name = "ccbridge-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "ccbridge"
path = "src/main.rs"

[dependencies]
ccbridge-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
notify = "6"
portable-pty = "0.8"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
